Исправлен футер и другие ошибки

--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <title>Глейси</title>
+    <meta charset="UTF-8">
+    <title>Gllacy shop</title>
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header class="container">
       <nav class="main-nav">
-        <a href="№" class="header-logo">
-          <img src="img/header-logo" width="" height="" alt="Gllacy shop">
+        <a href="#" class="header-logo">
+          <img src="https://via.placeholder.com/50" width="" height="" alt="Gllacy shop">
         </a>
         <ul class="site-nav">
           <li>
@@ -39,11 +39,11 @@
       <div class="container">
         <h1 class="visually-hidden">Магазин мороженного Gllacy</h1>
         <section class="features">
-          <b>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</b>
-          <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-          <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-          <p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-          <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+          <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
+          <p class="features-item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+          <p class="features-item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+          <p class="features-item">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+          <p class="features-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
         </section>
         <article class="new-in-blog">
           <h2>Новое в нашем блоге</h2>
@@ -52,36 +52,37 @@
           </p>
         </article>
         <section class="subscription-block">
+          <h2 class="visually-hidden">Подписка</h2>
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
           <!-- Форма подписки -->
         </section>
       </div>
     </main>
     <footer class="container">
-      <section class="social-network">
-        <a href="#" class="social-button social-button-twitter">Twitter</a>
-        <a href="#" class="social-button social-button-instagram">Instagram</a>
-        <a href="#" class="social-button social-button-fb">Facebook</a>
-        <a href="#" class="social-button social-button-vk">ВКонтакте</a>
-      </section>
-      <section class="info-block">
-        <p>
-          <a href="№">Для поставщиков</a>
-        </p>
-        <p>
-          <a href="№">О производстве</a>
-        </p>
-        <p>
-          <a href="№">Наши документы</a>
-        </p>
-        <p>
-          <a href="№">Экологические стандарты</a>
-        </p>
-      </section>
-      <section class="copyright-block">
-        <img src="#" alt="HTML Academy">
+      <ul class="social-network">
+        <li><a href="#" class="social-button social-button-twitter">Twitter</a></li>
+        <li><a href="#" class="social-button social-button-instagram">Instagram</a></li>
+        <li><a href="#" class="social-button social-button-fb">Facebook</a></li>
+        <li><a href="#" class="social-button social-button-vk">ВКонтакте</a></li>
+      </ul>>
+      <ul class="info-block">
+        <li>
+          <a href="#">Для поставщиков</a>
+        </li>
+        <li>
+          <a href="#">О производстве</a>
+        </li>
+        <li>
+          <a href="#">Наши документы</a>
+        </li>
+        <li>
+          <a href="#">Экологические стандарты</a>
+        </li>
+      </ul>
+      <div class="copyright-block">
+        <img src="https://via.placeholder.com/150" alt="HTML Academy">
         <p>Сделано в <a href="htmlacademy.ru">HTML Academy</a> © 2019</p>
-      </section>
+      </div>
     </footer>
   </body>
 </html>
