--- a/2/catalog.html
+++ b/2/catalog.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <base href="https://htmlacademy-htmlcss.github.io/971983-gllacy-24/2/">
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8">
+    <title>Gllacy shop</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <base href="https://htmlacademy-htmlcss.github.io/971983-gllacy-24/2/">
 </head>
   <body>
     <header class="container">
       <nav class="main-nav">
-        <a href="№" class="header-logo">
-          <img src="img/header-logo" width="" height="" alt="Gllacy shop">
+        <a href="#" class="header-logo">
+          <img src="https://via.placeholder.com/50" width="" height="" alt="Gllacy shop">
         </a>
         <ul class="site-nav">
           <li>
-            <a href="catalog.html">Каталог</a>
+            <a class="current-page" href="#">Каталог</a>
           </li>
           <li>
             <a href="#">Доставка и оплата</a>
@@ -57,7 +57,7 @@
               </h3>
               <p class="catalog-item-img">
                 <a href="#">
-                  <img src="#" alt="">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
                 </a>
               </p>
               <p class="catalog-item-price">
@@ -71,7 +71,7 @@
               </h3>
               <p class="catalog-item-img">
                 <a href="#">
-                  <img src="#" alt="">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
                 </a>
               </p>
               <p class="catalog-item-price">
@@ -85,7 +85,7 @@
               </h3>
               <p class="catalog-item-img">
                 <a href="#">
-                  <img src="#" alt="">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
                 </a>
               </p>
               <p class="catalog-item-price">
@@ -99,7 +99,7 @@
               </h3>
               <p class="catalog-item-img">
                 <a href="#">
-                  <img src="#" alt="">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочного крем-брюле с карамельной подливкой">
                 </a>
               </p>
               <p class="catalog-item-price">
@@ -113,7 +113,7 @@
               </h3>
               <p class="catalog-item-img">
                 <a href="#">
-                  <img src="#" alt="">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочного мороженого с брусничным джемом">
                 </a>
               </p>
               <p class="catalog-item-price">
@@ -127,7 +127,7 @@
               </h3>
               <p class="catalog-item-img">
                 <a href="#">
-                  <img src="#" alt="">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочно-черничного мороженого с цельными ягодами черники">
                 </a>
               </p>
               <p class="catalog-item-price">
@@ -141,7 +141,7 @@
               </h3>
               <p class="catalog-item-img">
                 <a href="#">
-                  <img src="#" alt="">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочно-лимонного мороженого с карамельной присыпкой">
                 </a>
               </p>
               <p class="catalog-item-price">
@@ -155,7 +155,7 @@
               </h3>
               <p class="catalog-item-img">
                 <a href="#">
-                  <img src="#" alt="">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочного мороженого с шоколадной стружкой">
                 </a>
               </p>
               <p class="catalog-item-price">
@@ -169,7 +169,7 @@
               </h3>
               <p class="catalog-item-img">
                 <a href="#">
-                  <img src="#" alt="">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочно-ванильного мороженого с кусочками шоколада">
                 </a>
               </p>
               <p class="catalog-item-price">
@@ -183,7 +183,7 @@
               </h3>
               <p class="catalog-item-img">
                 <a href="#">
-                  <img src="#" alt="">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочного мороженого с ментоловым сиропом">
                 </a>
               </p>
               <p class="catalog-item-price">
@@ -197,7 +197,7 @@
               </h3>
               <p class="catalog-item-img">
                 <a href="#">
-                  <img src="#" alt="">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочного мороженнго с кусочками черного шоколада">
                 </a>
               </p>
               <p class="catalog-item-price">
@@ -211,7 +211,7 @@
               </h3>
               <p class="catalog-item-img">
                 <a href="#">
-                  <img src="#" alt="">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочного мороженого с мятным сиропом">
                 </a>
               </p>
               <p class="catalog-item-price">
@@ -224,30 +224,30 @@
       </div>
     </main>
     <footer class="container">
-      <section class="social-network">
-        <a href="#" class="social-button social-button-twitter">Twitter</a>
-        <a href="#" class="social-button social-button-instagram">Instagram</a>
-        <a href="#" class="social-button social-button-fb">Facebook</a>
-        <a href="#" class="social-button social-button-vk">ВКонтакте</a>
-      </section>
-      <section class="info-block">
-        <p>
-          <a href="№">Для поставщиков</a>
-        </p>
-        <p>
-          <a href="№">О производстве</a>
-        </p>
-        <p>
-          <a href="№">Наши документы</a>
-        </p>
-        <p>
-          <a href="№">Экологические стандарты</a>
-        </p>
-      </section>
-      <section class="copyright-block">
-        <img src="#" alt="HTML Academy">
+      <ul class="social-network">
+        <li><a href="#" class="social-button social-button-twitter">Twitter</a></li>
+        <li><a href="#" class="social-button social-button-instagram">Instagram</a></li>
+        <li><a href="#" class="social-button social-button-fb">Facebook</a></li>
+        <li><a href="#" class="social-button social-button-vk">ВКонтакте</a></li>
+      </ul>>
+      <ul class="info-block">
+        <li>
+          <a href="#">Для поставщиков</a>
+        </li>
+        <li>
+          <a href="#">О производстве</a>
+        </li>
+        <li>
+          <a href="#">Наши документы</a>
+        </li>
+        <li>
+          <a href="#">Экологические стандарты</a>
+        </li>
+      </ul>
+      <div class="copyright-block">
+        <img src="https://via.placeholder.com/150" alt="HTML Academy">
         <p>Сделано в <a href="htmlacademy.ru">HTML Academy</a> © 2019</p>
-      </section>
-    </footer> 
+      </div>
+    </footer>
   </body>
 </html>
