Исправлены ошибки, выявленные в код ревью

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="container">
       <nav class="main-nav">
-        <a href="#" class="header-logo">
+        <a class="header-logo">
           <img src="https://via.placeholder.com/50" width="" height="" alt="Gllacy shop">
         </a>
         <ul class="site-nav">
@@ -31,19 +31,25 @@
           <a class="button entrance-button" href="#">Вход</a>
         </li>
         <li>
-          <a class="button basket-button" href="#">Пусто</a>
+          <a class="button basket-button" href="#"><span class="visually-hidden">Корзина:</span>>Пусто</a>
         </li>
       </ul>
+      <p class="working-info">
+        <span class="working-hours">С 10 до 20, ежедневно</span>
+        <span class="number">8 812 450-25-25</span>
+      </p>
     </header>
     <main>
       <div class="container">
         <h1 class="visually-hidden">Магазин мороженного Gllacy</h1>
         <section class="features">
           <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
-          <p class="features-item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-          <p class="features-item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-          <p class="features-item">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-          <p class="features-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+          <ul class="features-list">
+            <li class="features-list-item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+            <li class="features-list-item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
+            <li class="features-list-item">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+            <li class="features-list-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+          </ul>
         </section>
         <article class="new-in-blog">
           <h2>Новое в нашем блоге</h2>
@@ -64,9 +70,9 @@
         <li><a href="#" class="social-button social-button-instagram">Instagram</a></li>
         <li><a href="#" class="social-button social-button-fb">Facebook</a></li>
         <li><a href="#" class="social-button social-button-vk">ВКонтакте</a></li>
-      </ul>>
-      <ul class="info-block">
-        <li>
+      </ul>
+      <ul class="footer-links">
+        <li class="heart">
           <a href="#">Для поставщиков</a>
         </li>
         <li>
@@ -80,7 +86,9 @@
         </li>
       </ul>
       <div class="copyright-block">
-        <img src="https://via.placeholder.com/150" alt="HTML Academy">
+        <a href="htmlacademy.ru">
+          <img src="https://via.placeholder.com/150" alt="HTML Academy">
+        </a>
         <p>Сделано в <a href="htmlacademy.ru">HTML Academy</a> © 2019</p>
       </div>
     </footer>
