--- a/catalog.html
+++ b/catalog.html
@@ -8,12 +8,12 @@
   <body>
     <header class="container">
       <nav class="main-nav">
-        <a href="#" class="header-logo">
+        <a href="index.html" class="header-logo">
           <img src="https://via.placeholder.com/50" width="" height="" alt="Gllacy shop">
         </a>
         <ul class="site-nav">
           <li>
-            <a class="current-page" href="#">Каталог</a>
+            <a class="current-page">Каталог</a>
           </li>
           <li>
             <a href="#">Доставка и оплата</a>
@@ -31,24 +31,24 @@
           <a class="button entrance-button" href="#">Вход</a>
         </li>
         <li>
-          <a class="button basket-button" href="#">Пусто</a>
+          <a class="button basket-button" href="#"><span class="visually-hidden">Корзина:</span>>2 товара</a>
         </li>
       </ul>
+      <p class="working-info">
+        <span class="working-hours">С 10 до 20, ежедневно</span>
+        <span class="number">8 812 450-25-25</span>
+      </p>
     </header>
     <main>
       <div class="container">
-        <h1 class="page-title">Сливочное мороженое</h1>
         <ul class="breadcrumbs">
           <li><a href="index.html">Главная</a></li>
           <li><a href="#">Каталог</a></li>
           <li class="breadcrumbs-current">Сливочное</li>
         </ul>
-        <section class="working-info">
-          <span class="working-hours">С 10 до 20, ежедневно</span>
-          <span class="number">8 812 450-25-25</span>
-        </section>
+        <h1 class="page-title">Сливочное мороженое</h1>
         <section class="catalog">
-          <h2>Список сливочного мороженого</h2>
+          <h2 class="visually-hidden">Список сливочного мороженого</h2>
           <ul class="catalog-list">
             <li class="catalog-item">
               <h3>
@@ -63,6 +63,7 @@
                 <span class="price">310₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>   
             </li>
             <li class="catalog-item">
               <h3>
@@ -77,6 +78,7 @@
                 <span class="price">380₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -91,6 +93,7 @@
                 <span class="price">355₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -105,6 +108,7 @@
                 <span class="price">415₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -119,6 +123,7 @@
                 <span class="price">325₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -133,6 +138,7 @@
                 <span class="price">410₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -147,6 +153,7 @@
                 <span class="price">375₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -161,6 +168,7 @@
                 <span class="price">320₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -175,6 +183,7 @@
                 <span class="price">440₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -189,6 +198,7 @@
                 <span class="price">435₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -203,6 +213,7 @@
                 <span class="price">355₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -217,6 +228,7 @@
                 <span class="price">420₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
           </ul>
         </section>
@@ -228,9 +240,9 @@
         <li><a href="#" class="social-button social-button-instagram">Instagram</a></li>
         <li><a href="#" class="social-button social-button-fb">Facebook</a></li>
         <li><a href="#" class="social-button social-button-vk">ВКонтакте</a></li>
-      </ul>>
-      <ul class="info-block">
-        <li>
+      </ul>
+      <ul class="footer-links">
+        <li class="heart">
           <a href="#">Для поставщиков</a>
         </li>
         <li>
@@ -244,7 +256,9 @@
         </li>
       </ul>
       <div class="copyright-block">
-        <img src="https://via.placeholder.com/150" alt="HTML Academy">
+        <a href="htmlacademy.ru">
+          <img src="https://via.placeholder.com/150" alt="HTML Academy">
+        </a>
         <p>Сделано в <a href="htmlacademy.ru">HTML Academy</a> © 2019</p>
       </div>
     </footer>
