Исправлены мелкие ошибки

--- a/catalog.html
+++ b/catalog.html
@@ -31,7 +31,7 @@
           <a class="button entrance-button" href="#">Вход</a>
         </li>
         <li>
-          <a class="button basket-button" href="#"><span class="visually-hidden">Корзина:</span>>2 товара</a>
+          <a class="button basket-button" href="#"><span class="visually-hidden">Корзина:</span>2 товара</a>
         </li>
       </ul>
       <p class="working-info">
@@ -242,7 +242,7 @@
         <li><a href="#" class="social-button social-button-vk">ВКонтакте</a></li>
       </ul>
       <ul class="footer-links">
-        <li class="heart">
+        <li class="favorite">
           <a href="#">Для поставщиков</a>
         </li>
         <li>
@@ -256,10 +256,10 @@
         </li>
       </ul>
       <div class="copyright-block">
-        <a href="htmlacademy.ru">
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
           <img src="https://via.placeholder.com/150" alt="HTML Academy">
         </a>
-        <p>Сделано в <a href="htmlacademy.ru">HTML Academy</a> © 2019</p>
+        <p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2019</p>
       </div>
     </footer>
   </body>
