Дополнена разметка проекта

--- a/catalog.html
+++ b/catalog.html
@@ -47,6 +47,7 @@
           <li class="breadcrumbs-current">Сливочное</li>
         </ul>
         <h1 class="page-title">Сливочное мороженое</h1>
+        <!-- Фильтры -->
         <section class="catalog">
           <h2 class="visually-hidden">Список сливочного мороженого</h2>
           <ul class="catalog-list">
@@ -230,6 +231,14 @@
               </p>
               <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
+          </ul>
+          <ul class="pagination-list">
+            <li class="pagination-item pagination-item-current"><a>1</a></li>
+            <li class="pagination-item"><a href="#">2</a></li>
+            <li class="pagination-item"><a href="#">3</a></li>
+            <li class="pagination-item"><a href="#">4</a></li>
+            <li class="pagination-item"><a href="#">5</a></li>
+            <li class="pagination-item"><a href="#">></a></li>
           </ul>
         </section>
       </div>
