--- a/index.html
+++ b/index.html
@@ -41,7 +41,106 @@
     </header>
     <main>
       <div class="container">
-        <h1 class="visually-hidden">Магазин мороженного Gllacy</h1>
+        <h1 class="visually-hidden">Магазин мороженого Gllacy</h1>
+        <section class="slider-block">
+          <h2 class="visually-hidden">Слайды</h2>
+          <ul class="slider-list">
+            <li class="slider-item">
+              <p>Крем-брюле и пломбир с малиновым джемом</p>
+              <a href="#" class="button slider-button">Давайте оба!</a>
+            </li>
+            <li class="slider-item">
+              <p>Шоколадный пломбир и лимонный сорбет </p>
+              <a href="#" class="button slider-button">Давайте оба!</a>
+            </li>
+            <li class="slider-item">
+              <p>Пломбир с помадкой и клубничный щербет</p>
+              <a href="#" class="button slider-button">Давайте оба!</a>
+            </li>
+          </ul>
+          <ul class="slider-nav">
+            <li><button class="button slider-nav-button"></button></li>
+            <li><button class="button slider-nav-button"></button></li>
+            <li><button class="button slider-nav-button"></button></li>
+          </ul>
+        </section>
+        <ul class="store-promotions-list">
+          <li class="store-promotions-item">
+            <h2>Малинка даром!</h2>
+            <p class="store-promotions-description">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a href="#">Хочу варенье!</a>
+          </li>
+          <li class="store-promotions-item">
+            <h2>Шоколадки даром!</h2>
+            <p class="store-promotions-description">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+            <a href="#">Хочу шоколадки!</a>
+          </li>
+        </ul>
+        <section class="hit-catalog">
+          <h2 class="visually-hidden">Хитовый товары</h2>
+          <ul class="hit-catalog-list">
+            <li class="hit-catalog-item">
+              <h3>
+                <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+              </h3>
+              <p class="hit-catalog-item-img">
+                <a href="#">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
+                  <img src="https://via.placeholder.com/20" alt="Хит">
+                </a>
+              </p>
+              <p class="hit-catalog-item-price">
+                <span class="price">310₽</span>
+                <span class="weight">/кг</span>
+              </p>
+            </li>
+            <li class="hit-catalog-item">
+              <h3>
+                <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+              </h3>
+              <p class="hit-catalog-item-img">
+                <a href="#">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
+                  <img src="https://via.placeholder.com/20" alt="Хит">
+                </a>
+              </p>
+              <p class="hit-catalog-item-price">
+                <span class="price">380₽</span>
+                <span class="weight">/кг</span>
+              </p>
+            </li>
+            <li class="hit-catalog-item">
+              <h3>
+                <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+              </h3>
+              <p class="hit-catalog-item-img">
+                <a href="#">
+                  <img src="https://via.placeholder.com/150" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
+                  <img src="https://via.placeholder.com/20" alt="Хит">
+                </a>
+              </p>
+              <p class="hit-catalog-item-price">
+                <span class="price">355₽</span>
+                <span class="weight">/кг</span>
+              </p>
+            </li>
+            <li class="hit-catalog-item">
+              <h3>
+                <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+              </h3>
+              <p class="hit-catalog-item-img">
+                <a href="#">
+                  <img src="https://via.placeholder.com/150" alt="Фото крем-брюле с карамельной подливкой">
+                  <img src="https://via.placeholder.com/20" alt="Хит">
+                </a>
+              </p>
+              <p class="hit-catalog-item-price">
+                <span class="price">415₽</span>
+                <span class="weight">/кг</span>
+              </p>
+            </li>
+          </ul>
+        </section>
         <section class="features">
           <h2>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
           <ul class="features-list">
@@ -61,6 +160,26 @@
           <h2 class="visually-hidden">Подписка</h2>
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
           <!-- Форма подписки -->
+        </section>
+        <section class="map-block">
+          <p class="map">
+            <img src="https://via.placeholder.com/300" alt="Карта с местоположением магазина">
+          </p>
+        </section>
+        <section class="contact-block">
+          <h2 class="visually-hidden">Контактная информация</h2>
+          <p class="address">
+            Адрес главного офиса<br>
+            и офлайн-магазина:<br>
+            <span>ул. Большая Конюшенная</span><br>
+            <span>19/8, Санкт-Петербург</span>
+          </p>
+          <p class="number">
+            Для заказов по телефону:
+            <span>8 812 450-25-25</span>
+            (с 10 до 20 ежедневно)
+          </p>
+          <a href="#" class="button contact-button">Форма обратной связи</a>
         </section>
       </div>
     </main>
