:heavy_check_mark: Сборка #3

--- a/3/index.html
+++ b/3/index.html
@@ -44,7 +44,7 @@
       <div class="container">
         <h1 class="visually-hidden">Магазин мороженого Gllacy</h1>
         <section class="slider-block">
-          <h2 class="visually-hidden">Слайды</h2>
+          <h2 class="visually-hidden">Лучшие сорта мороженого</h2>
           <ul class="slider-list">
             <li class="slider-item">
               <p>Крем-брюле и пломбир с малиновым джемом</p>
@@ -77,65 +77,65 @@
             <a href="#">Хочу шоколадки!</a>
           </li>
         </ul>
-        <section class="hit-catalog">
+        <section class="catalog">
           <h2 class="visually-hidden">Хитовый товары</h2>
-          <ul class="hit-catalog-list">
-            <li class="hit-catalog-item">
+          <ul class="catalog-list">
+            <li class="catalog-item">
               <h3>
                 <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
               </h3>
-              <p class="hit-catalog-item-img">
+              <p class="catalog-item-img">
                 <a href="#">
+                  <b class="hit"><span class="visually-hidden">Хит</span></b>
                   <img src="https://via.placeholder.com/150" alt="Фото сливочного мороженого с апельсиновым джемом и цитрусовой стружкой">
-                  <img src="https://via.placeholder.com/20" alt="Хит">
                 </a>
               </p>
-              <p class="hit-catalog-item-price">
+              <p class="catalog-item-price">
                 <span class="price">310₽</span>
                 <span class="weight">/кг</span>
               </p>
             </li>
-            <li class="hit-catalog-item">
+            <li class="catalog-item">
               <h3>
                 <a href="#">Сливочно-кофейное с кусочками шоколада</a>
               </h3>
-              <p class="hit-catalog-item-img">
+              <p class="catalog-item-img">
                 <a href="#">
+                  <b class="hit"><span class="visually-hidden">Хит</span></b>
                   <img src="https://via.placeholder.com/150" alt="Фото сливочно-кофейного мороженого с кусочками шоколада">
-                  <img src="https://via.placeholder.com/20" alt="Хит">
                 </a>
               </p>
-              <p class="hit-catalog-item-price">
+              <p class="catalog-item-price">
                 <span class="price">380₽</span>
                 <span class="weight">/кг</span>
               </p>
             </li>
-            <li class="hit-catalog-item">
+            <li class="catalog-item">
               <h3>
                 <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
               </h3>
-              <p class="hit-catalog-item-img">
+              <p class="catalog-item-img">
                 <a href="#">
+                  <b class="hit"><span class="visually-hidden">Хит</span></b>
                   <img src="https://via.placeholder.com/150" alt="Фото сливочно-клубничного мороженого с присыпкой из белого шоколада">
-                  <img src="https://via.placeholder.com/20" alt="Хит">
                 </a>
               </p>
-              <p class="hit-catalog-item-price">
+              <p class="catalog-item-price">
                 <span class="price">355₽</span>
                 <span class="weight">/кг</span>
               </p>
             </li>
-            <li class="hit-catalog-item">
+            <li class="catalog-item">
               <h3>
                 <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
               </h3>
-              <p class="hit-catalog-item-img">
+              <p class="catalog-item-img">
                 <a href="#">
+                  <b class="hit"><span class="visually-hidden">Хит</span></b>
                   <img src="https://via.placeholder.com/150" alt="Фото крем-брюле с карамельной подливкой">
-                  <img src="https://via.placeholder.com/20" alt="Хит">
                 </a>
               </p>
-              <p class="hit-catalog-item-price">
+              <p class="catalog-item-price">
                 <span class="price">415₽</span>
                 <span class="weight">/кг</span>
               </p>
