--- a/index.html
+++ b/index.html
@@ -59,21 +59,21 @@
             </li>
           </ul>
           <ul class="slider-nav">
-            <li><button class="button slider-nav-button"></button></li>
-            <li><button class="button slider-nav-button"></button></li>
-            <li><button class="button slider-nav-button"></button></li>
+            <li><button class="button slider-nav-button">1</button></li>
+            <li><button class="button slider-nav-button">2</button></li>
+            <li><button class="button slider-nav-button">3</button></li>
           </ul>
         </section>
         <ul class="store-promotions-list">
-          <li class="store-promotions-item">
+          <li class="store-promotions-item raspberries-background">
             <h2>Малинка даром!</h2>
             <p class="store-promotions-description">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <a href="#">Хочу варенье!</a>
+            <a href="#" class="button promotions-button">Хочу варенье!</a>
           </li>
-          <li class="store-promotions-item">
+          <li class="store-promotions-item chocolate-background">
             <h2>Шоколадки даром!</h2>
             <p class="store-promotions-description">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-            <a href="#">Хочу шоколадки!</a>
+            <a href="#" class="button promotions-button">Хочу шоколадки!</a>
           </li>
         </ul>
         <section class="catalog">
@@ -93,6 +93,7 @@
                 <span class="price">310₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -108,6 +109,7 @@
                 <span class="price">380₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -123,6 +125,7 @@
                 <span class="price">355₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
             <li class="catalog-item">
               <h3>
@@ -138,6 +141,7 @@
                 <span class="price">415₽</span>
                 <span class="weight">/кг</span>
               </p>
+              <a href="#" class="button catalog-item-button">Быстрый просмотр</a>
             </li>
           </ul>
         </section>
@@ -162,6 +166,7 @@
           <!-- Форма подписки -->
         </section>
         <section class="map-block">
+          <h2 class="visually-hidden">Карта проезда</h2>
           <p class="map">
             <img src="https://via.placeholder.com/300" alt="Карта с местоположением магазина">
           </p>
@@ -169,14 +174,14 @@
         <section class="contact-block">
           <h2 class="visually-hidden">Контактная информация</h2>
           <p class="address">
-            Адрес главного офиса<br>
-            и офлайн-магазина:<br>
-            <span>ул. Большая Конюшенная</span><br>
-            <span>19/8, Санкт-Петербург</span>
+            Адрес главного офиса
+            и офлайн-магазина:
+            <b>ул. Большая Конюшенная</b>
+            <b>19/8, Санкт-Петербург</b>
           </p>
           <p class="number">
             Для заказов по телефону:
-            <span>8 812 450-25-25</span>
+            <b>8 812 450-25-25</b>
             (с 10 до 20 ежедневно)
           </p>
           <a href="#" class="button contact-button">Форма обратной связи</a>
