--- a/index.html
+++ b/index.html
@@ -165,26 +165,28 @@
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
           <!-- Форма подписки -->
         </section>
-        <section class="map-block">
-          <h2 class="visually-hidden">Карта проезда</h2>
-          <p class="map">
-            <img src="https://via.placeholder.com/300" alt="Карта с местоположением магазина">
-          </p>
-        </section>
-        <section class="contact-block">
-          <h2 class="visually-hidden">Контактная информация</h2>
-          <p class="address">
-            Адрес главного офиса
-            и офлайн-магазина:
-            <b>ул. Большая Конюшенная</b>
-            <b>19/8, Санкт-Петербург</b>
-          </p>
-          <p class="number">
-            Для заказов по телефону:
-            <b>8 812 450-25-25</b>
-            (с 10 до 20 ежедневно)
-          </p>
-          <a href="#" class="button contact-button">Форма обратной связи</a>
+        <section class="information">  
+          <div class="map-information">
+            <h2 class="visually-hidden">Карта проезда</h2>
+            <p class="map">
+              <img src="https://via.placeholder.com/300" alt="Карта с местоположением магазина">
+            </p>
+          </div>
+          <div class="contact-information">
+            <h2 class="visually-hidden">Контактная информация</h2>
+            <p class="address">
+              Адрес главного офиса
+              и офлайн-магазина:
+              <b>ул. Большая Конюшенная</b>
+              <b>19/8, Санкт-Петербург</b>
+            </p>
+            <p class="number">
+              Для заказов по телефону:
+              <b>8 812 450-25-25</b>
+              (с 10 до 20 ежедневно)
+            </p>
+            <a href="#" class="button contact-button">Форма обратной связи</a>
+          </div>
         </section>
       </div>
     </main>
