--- a/index.html
+++ b/index.html
@@ -165,15 +165,14 @@
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
           <!-- Форма подписки -->
         </section>
-        <section class="information">  
+        <section class="information">
+          <h2 class="visually-hidden">Информация</h2>  
           <div class="map-information">
-            <h2 class="visually-hidden">Карта проезда</h2>
             <p class="map">
               <img src="https://via.placeholder.com/300" alt="Карта с местоположением магазина">
             </p>
           </div>
           <div class="contact-information">
-            <h2 class="visually-hidden">Контактная информация</h2>
             <p class="address">
               Адрес главного офиса
               и офлайн-магазина:
