Классы в блоке с контактной информацией изменены на информативные.

--- a/index.html
+++ b/index.html
@@ -165,12 +165,10 @@
           <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
           <!-- Форма подписки -->
         </section>
-        <section class="information">
-          <h2 class="visually-hidden">Информация</h2>  
-          <div class="map-information">
-            <p class="map">
-              <img src="https://via.placeholder.com/300" alt="Карта с местоположением магазина">
-            </p>
+        <section class="contacts">
+          <h2 class="visually-hidden">Контактная нформация</h2>  
+          <div class="map">
+            <img src="https://via.placeholder.com/300" alt="Карта с местоположением магазина">
           </div>
           <div class="contact-information">
             <p class="address">
